--- a/client/src/css/getusers.scss
+++ b/client/src/css/getusers.scss
@@ -1,10 +1,19 @@
 @mixin styles {
-    .grid-container {
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        background-color: #2196F3;
-        padding: 10px;
+    .data-container {
+        .grid-container {
+            display: grid;
+            grid-template-columns: auto auto auto auto;
+            background-color: #2196F3;
+            padding: 10px;
+        }
 
+        .grid-container-2 {
+            display: grid;
+            grid-template-columns: auto auto auto auto auto;
+            background-color: #2196F3;
+            padding: 10px;
+        }
+    
         .grid-item {
             background-color: rgba(255, 255, 255, 0.8);
             border: 1px solid rgba(0, 0, 0, 0.8);
