added image assets

--- a/client/src/css/getusers.scss
+++ b/client/src/css/getusers.scss
@@ -26,30 +26,13 @@
             .data-item-contents {
                 // border-bottom: 1pt solid black;
                 // color: #ABA67D;
+
+                .check-out-btn {
+                    width: auto;
+                    height: 35px;
+                    cursor: pointer;
+                }
             }
         }
-
-
-        // .grid-container {
-        //     display: grid;
-        //     grid-template-columns: auto auto auto auto;
-        //     background-color: #2196F3;
-        //     padding: 10px;
-        // }
-
-        // .grid-container-2 {
-        //     display: grid;
-        //     grid-template-columns: auto auto auto auto auto;
-        //     background-color: #2196F3;
-        //     padding: 10px;
-        // }
-    
-        // .grid-item {
-        //     background-color: rgba(255, 255, 255, 0.8);
-        //     border: 1px solid rgba(0, 0, 0, 0.8);
-        //     padding: 10px;
-        //     font-size: 30px;
-        //     text-align: center;
-        // }
     }
 }
