--- a/client/src/css/insertusers.scss
+++ b/client/src/css/insertusers.scss
@@ -1,24 +1,9 @@
 @mixin styles {
-    .collapsible {
-        background-color: #eee;
-        color: #444;
-        cursor: pointer;
-        // padding: 18px;
-        // width: 100%;
-        // border: none;
-        // text-align: left;
-        // outline: none;
-        font-size: 15px;
+    form {
+        padding-bottom: 50px;
     }
-
-    .active, .collapsible:hover {
-        background-color: #ccc;
-    }
-
-    .content {
-        padding: 0 18px;
-        display: none;
-        overflow: hidden;
-        background-color: #f1f1f1;
+    .check-in-btn {
+        width: auto;
+        height: 35px;
     }
 }
