--- a/client/src/css/insertusers.scss
+++ b/client/src/css/insertusers.scss
@@ -1,7 +1,13 @@
 @mixin styles {
     form {
+        display: inline-flex;
         padding-bottom: 50px;
     }
+
+    input, select {
+        margin-right: 10px;
+    }
+
     .check-in-btn {
         width: auto;
         height: 35px;
