--- a/client/src/css/_insertusers.scss
+++ b/client/src/css/_insertusers.scss
@@ -8,10 +8,17 @@ form {
 input, select {
     margin-right: 10px;
     background-color: #B8FCE1;
-    border: none;
+    background-clip: padding-box;
+    border: 4px solid transparent;
 
     &:disabled {
         background-color: lightgrey;
+    }
+
+    &:hover:enabled, &:focus:enabled {
+        box-shadow: 0 0 0 2px #6DFDC3;
+        border-radius: 10px;
+        outline: none;
     }
 }
 
@@ -73,8 +80,7 @@ select, option {
     background: transparent;
     border: 0px;
     padding: 0;
-    outline: 0;
-    
+    outline: 0; 
 }
 
 .check-in-btn {
