tab index for buttons

--- a/client/src/css/_getusers.scss
+++ b/client/src/css/_getusers.scss
@@ -14,14 +14,15 @@
             padding-top: 20px;
             padding-bottom: 20px;
             color: #787878;
-            font-size: 25px;
+            font-size: 30px;
             font-family: $inconsolata;
+            // text-align: center;
         }
 
         .data-item-titles {
             padding-bottom: 20px;
             color: #aba67d;
-            font-size: 22px;
+            font-size: 25px;
             font-family: $inconsolata;            
         }
 
