--- a/client/src/css/_insertusers.scss
+++ b/client/src/css/_insertusers.scss
@@ -12,7 +12,7 @@ input, select {
     border: 4px solid transparent;
 
     &:disabled {
-        background-color: lightgrey;
+        background-color: #dbdbdb;
     }
 
     &:hover:enabled, &:focus:enabled {
@@ -22,31 +22,39 @@ input, select {
     }
 }
 
+input {
+    height: 50px;
+}
+
+select {
+    height: 60px;
+}
+
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: #578EB7;
     opacity: 1; /* Firefox */
-    font-size: 20px;
+    font-size: 23px;
     font-family: $source-code-pro;
     text-align: center;
 }
     
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
     color: #578EB7;
-    font-size: 20px;
+    font-size: 23px;
     font-family: $source-code-pro;
     text-align: center;
 }
     
 ::-ms-input-placeholder { /* Microsoft Edge */
     color: #578EB7;
-    font-size: 20px;
+    font-size: 23px;
     font-family: $source-code-pro;
     text-align: center;
 }
 
 select, option {
     color: #578EB7;
-    font-size: 20px;
+    font-size: 23px;
     font-family: $source-code-pro;
     font-weight: 600;
 }
@@ -60,7 +68,6 @@ select, option {
 .check-in, .divider, .check-out {
     font-family: $source-code-pro;
     font-size: 40px;
-    font-style: italic;
     font-weight: 800;
 }
 
@@ -91,8 +98,8 @@ select, option {
     display: inline-block;
     background-clip: padding-box;
     border: 3px solid transparent;
-    width: 35px;
-    height: 35px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
 
     &:hover, &:focus {
