--- a/client/src/css/_variables.scss
+++ b/client/src/css/_variables.scss
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Source+Code+Pro:ital,wght@0,600;1,800&display=swap');
-// font-family: 'Source Code Pro', monospace;
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@800&family=Roboto:wght@100&family=Source+Code+Pro:wght@600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@800&family=Roboto:wght@100&family=Source+Code+Pro:ital,wght@0,600;1,800&display=swap');
-// font-family: 'Inconsolata', monospace;
 
 // Font Variables
 $source-code-pro: 'Source Code Pro', monospace; 
