--- a/client/src/css/_getusers.scss
+++ b/client/src/css/_getusers.scss
@@ -7,7 +7,7 @@
         margin: 5px;
         height: 100%;
         background-color: #ecfcff;
-        max-width: 100%;
+        max-width: 461px;
         border-radius: 5px;
 
         .data-item-heading {
