--- a/client/src/css/_insertusers.scss
+++ b/client/src/css/_insertusers.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 
+.insert-users-background {
+    background-color: #f9f9f9;
+}
+
 form {
     display: inline-flex;
     padding-bottom: 50px;
