--- a/client/src/css/_variables.scss
+++ b/client/src/css/_variables.scss
@@ -5,8 +5,20 @@
 $source-code-pro: 'Source Code Pro', monospace; 
 $inconsolata: 'Inconsolata', monospace;
 
+// Colors
+$aero-blue: #B8FCE1;
+$alto: #dbdbdb;
+$aquamarine: #6dfdc3;
+$hippie-blue: #578eb7;
+$gumbo: #74a2ab;
+$twilight-blue: #ecfcff;
+$boulder: #787878;
+$hillary: #aba67d;
+$dove-gray: #686868;
+
 // Toastify variables
 :root {
     --toastify-color-success: #6DFDC3 !important;
     --toastify-color-info: #74A2AB !important;
 }
+
