--- a/client/src/css/_insertusers.scss
+++ b/client/src/css/_insertusers.scss
@@ -1,5 +1,3 @@
-@import 'variables';
-
 .insert-users-background {
     background-image: url('../images/header-bg.png');
     background-repeat: no-repeat;
@@ -18,16 +16,16 @@ form {
 
 input, select {
     margin-right: 10px;
-    background-color: #B8FCE1;
+    background-color: $aero-blue;
     background-clip: padding-box;
     border: 4px solid transparent;
 
     &:disabled {
-        background-color: #dbdbdb;
+        background-color: $alto;        
     }
 
     &:hover:enabled, &:focus:enabled {
-        box-shadow: 0 0 0 2px #6DFDC3;
+        box-shadow: 0 0 0 2px $aquamarine;
         border-radius: 10px;
         outline: none;
     }
@@ -50,7 +48,7 @@ select {
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #578EB7;
+    color: $hippie-blue;
     opacity: 1; /* Firefox */
     font-size: 23px;
     font-family: $source-code-pro;
@@ -58,21 +56,21 @@ select {
 }
     
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: #578EB7;
+    color: $hippie-blue;
     font-size: 23px;
     font-family: $source-code-pro;
     text-align: center;
 }
     
 ::-ms-input-placeholder { /* Microsoft Edge */
-    color: #578EB7;
+    color: $hippie-blue;
     font-size: 23px;
     font-family: $source-code-pro;
     text-align: center;
 }
 
 select, option {
-    color: #578EB7;
+    color: $hippie-blue;
     font-size: 23px;
     font-family: $source-code-pro;
     font-weight: 600;
@@ -95,11 +93,11 @@ select, option {
 }
 
 .check-in {
-    color: #6DFDC3;
+    color: $aquamarine;
 }
 
 .divider {
-    color: #b8fce1;
+    color: $aero-blue;
 }
 
 .divider:after {
@@ -110,7 +108,7 @@ select, option {
 }
 
 .check-out {
-    color: #74A2AB;
+    color: $gumbo;
 }
 
 .parent-check-in-btn {
@@ -134,7 +132,7 @@ select, option {
 
     &:hover, &:focus {
         background-image: url('../images/in_graphic_rollover.svg');
-        box-shadow: 0 0 0 2px #6DFDC3;
+        box-shadow: 0 0 0 2px $aquamarine;
         border-radius: 10px;
         outline: none;
     }
