--- a/client/src/css/_insertusers.scss
+++ b/client/src/css/_insertusers.scss
@@ -2,6 +2,7 @@
     background-image: url('../images/header-bg.png');
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
 }
 
 form {
