layout changed from flexbox to grid, form only resets on successful submit

--- a/client/src/css/_insertusers.scss
+++ b/client/src/css/_insertusers.scss
@@ -75,6 +75,7 @@ select, option {
     font-size: 23px;
     font-family: $source-code-pro;
     font-weight: 600;
+    cursor: pointer;
 
     @media (max-width: 720px) {
         text-align: center;
