--- a/client/src/css/_getusers.scss
+++ b/client/src/css/_getusers.scss
@@ -1,13 +1,22 @@
 .data-container {
-    display: flex;
-    flex-wrap: wrap;
 
-    .data-item {
-        flex: 1 0 21%; 
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px 10px;
+    margin-bottom: 50px;
+
+    @media (max-width: 768px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 425px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .data-item {    
         margin: 10px;
-        height: 100%;
+        height: fit-content;
         background-color: $twilight-blue;
-        max-width: 450px;
         border-radius: 5px;
         border: 1px solid $gumbo;
         box-shadow: 4px 5px $gumbo;
@@ -53,7 +62,9 @@
 
         .data-item-line {
             max-width: 90%;
-            border-top: 1px solid $hillary;
+            background: $hillary;
+            height: 1px;
+            border: 0px;
         }
     }
 }
