updated image assets, applied delete confirm styling and removed tab index when overlay is present

--- a/client/src/css/_variables.scss
+++ b/client/src/css/_variables.scss
@@ -6,11 +6,11 @@ $source-code-pro: 'Source Code Pro', monospace;
 $inconsolata: 'Inconsolata', monospace;
 
 // Colors
-$aero-blue: #B8FCE1;
+$emerald: #57C99A;
 $alto: #dbdbdb;
-$aquamarine: #6dfdc3;
-$hippie-blue: #578eb7;
-$gumbo: #74a2ab;
+$amazon: #367D60;
+$chathams-blue: #1A486B;
+$boston-blue: #3AA0B0;
 $twilight-blue: #ecfcff;
 $boulder: #787878;
 $hillary: #aba67d;
