--- a/client/src/css/_deleteconfirmation.scss
+++ b/client/src/css/_deleteconfirmation.scss
@@ -26,5 +26,36 @@ body.active-modal {
         border-radius: 3px;
         max-width: 600px;
         min-width: 300px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        background-color: $twilight-blue;
+
+        .cancel-btn, .confirm-btn {
+            background-repeat: no-repeat;
+            background-position: center;
+            display: inline-block;
+            background-clip: padding-box;
+            width: 150px;
+            height: 150px;
+            cursor: pointer;
+        }
+
+        .cancel-btn {
+            background-image: url('../images/cancel_graphic.svg');
+            margin-right: 15px;
+
+            &:hover, &:focus {
+                background-image: url('../images/cancel_graphic_rollover.svg');
+                outline: none;
+            }
+        }
+
+        .confirm-btn {
+            background-image: url('../images/confirm_graphic.svg');
+
+            &:hover, &:focus {
+                background-image: url('../images/confirm_graphic_rollover.svg');
+                outline: none;
+            }
+        }
     }
 }
