--- a/client/src/css/_insertusers.scss
+++ b/client/src/css/_insertusers.scss
@@ -9,80 +9,86 @@ form {
     display: inline-flex;
     padding-bottom: 50px;
 
+    @media (max-width: 850px) {
+        display: flex;
+    }
+
     @media (max-width: 720px) {
         display: inline-flex;
         flex-direction: column;
     }
-}
 
-input, select {
-    margin-right: 10px;
-    background-color: $emerald;
-    background-clip: padding-box;
-    border: 4px solid transparent;
-
-    &:disabled {
-        background-color: $alto;        
-    }
-
-    &:hover:enabled, &:focus:enabled {
-        box-shadow: 0 0 0 2px $amazon;
-        border-radius: 10px;
-        outline: none;
-    }
-}
-
-input {
-    height: 50px;
-
-    @media (max-width: 720px) {
-        width: fit-content;
-    }
-}
-
-select {
-    height: 60px;
-
-    @media (max-width: 720px) {
-        width: 181px;
-    }
-}
-
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: $chathams-blue;
-    opacity: 1; /* Firefox */
-    font-size: 23px;
-    font-family: $source-code-pro;
-    text-align: center;
-}
+    input, select {
+        margin-right: 10px;
+        background-color: $emerald;
+        background-clip: padding-box;
+        border: 4px solid transparent;
     
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: $chathams-blue;
-    font-size: 23px;
-    font-family: $source-code-pro;
-    text-align: center;
-}
+        &:disabled {
+            background-color: $alto;        
+        }
     
-::-ms-input-placeholder { /* Microsoft Edge */
-    color: $chathams-blue;
-    font-size: 23px;
-    font-family: $source-code-pro;
-    text-align: center;
-}
-
-select, option {
-    color: $chathams-blue;
-    font-size: 23px;
-    font-family: $source-code-pro;
-    font-weight: 600;
-    cursor: pointer;
-    width: 181px;
-    text-align: center;
-
-    @media (max-width: 720px) {
+        &:hover:enabled, &:focus:enabled {
+            box-shadow: 0 0 0 2px $amazon;
+            border-radius: 10px;
+            outline: none;
+        }
+    }
+    
+    input {
+        height: 50px;
+    
+        @media (max-width: 720px) {
+            width: fit-content;
+        }
+    }
+    
+    select {
+        height: 60px;
+    
+        @media (max-width: 720px) {
+            width: 181px;
+        }
+    }
+    
+    ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+        color: $chathams-blue;
+        opacity: 1; /* Firefox */
+        font-size: 23px;
+        font-family: $source-code-pro;
         text-align: center;
     }
+        
+    :-ms-input-placeholder { /* Internet Explorer 10-11 */
+        color: $chathams-blue;
+        font-size: 23px;
+        font-family: $source-code-pro;
+        text-align: center;
+    }
+        
+    ::-ms-input-placeholder { /* Microsoft Edge */
+        color: $chathams-blue;
+        font-size: 23px;
+        font-family: $source-code-pro;
+        text-align: center;
+    }
+    
+    select, option {
+        color: $chathams-blue;
+        font-size: 23px;
+        font-family: $source-code-pro;
+        font-weight: 600;
+        cursor: pointer;
+        width: 181px;
+        text-align: center;
+    
+        @media (max-width: 720px) {
+            text-align: center;
+        }
+    }
 }
+
+
 
 .logo {
     width: auto;
