toastify color update

--- a/client/src/css/_variables.scss
+++ b/client/src/css/_variables.scss
@@ -18,7 +18,7 @@ $dove-gray: #686868;
 
 // Toastify variables
 :root {
-    --toastify-color-success: #6DFDC3 !important;
-    --toastify-color-info: #74A2AB !important;
+    --toastify-color-success: #367D60 !important;
+    --toastify-color-info: #3AA0B0 !important;
 }
 
